--- a/style.css
+++ b/style.css
@@ -1,125 +1,171 @@
-*{
+* {
     box-sizing: border-box;
+    font-family: 'Yanone Kaffeesatz', sans-serif;
 }
-body{
+body {
     margin: 0;
     padding: 0;
+    background-color: #f5f6fa;
 }
 
-.toolbox-cont > *{
-    margin-left: 4rem;
-    border-radius: 2px;
-}
-.toolbox-cont{
+.toolbox-cont {
     height: 5rem;
-    background-color: #3d3d3d;
+    background-color: #4b4b4b;
     display: flex;
     align-items: center;
 }
-.toolbox-priotity-cont{
+.toolbox-cont > * {
+    margin-left: 4rem;
+    border-radius: 2px;
+}
+.toolbox-priority-cont {
     height: 3.5rem;
-    width: 16rem;
-    background-color: #4b4b4b;
+    width: 14rem;
+    background-color: #3d3d3d;
     display: flex;
     justify-content: space-around;
     align-items: center;
 }
-.action-btn-cont{
+.action-btn-cont {
     height: 3.5rem;
-    width: 8rem;
-    background-color: #4b4b4b ;
+    width: 6rem;
+    background-color: #3d3d3d;
     display: flex;
 }
-.action-btn-cont > *{
+.action-btn-cont > * {
     display: flex;
-    /* height: 50%;  */
     justify-content: center;
     align-items: center;
     width: 50%;
-    font-size:2rem;
-    color: #dcdde1;
-} 
-.color{
+    font-size: 2rem;
+    color: #d1d8e0;
+}
+.color {
     height: 1.2rem;
-    width: 2.5rem;
+    width: 2rem;
     background-color: lightsalmon;
     border-radius: 2px;
-    
 }
-.lightpink{
+
+.lightpink {
     background-color: lightpink;
 }
-.lightgreen{
+.lightgreen {
     background-color: lightgreen;
 }
-.lightblue{
+.lightblue {
     background-color: lightblue;
 }
-.black{
+.black {
     background-color: black;
 }
-.action-btn-cont >*:hover{
-    background-color: black;
+
+.action-btn-cont > *:hover {
+    background-color: #485460;
 }
-.modal-cont{
+
+.modal-cont {
     height: 50vh;
     width: 45vw;
-    background-color: lightblue;
+    background: lightblue;
     position: absolute;
-    /* display: flex; */
-    top: calc( ( 100vh - 50vh ) / 2);
-    left: calc( (100vw - 45vw ) / 2);
+    top: calc( ( 100vh - 50vh ) / 2 );
+    left: calc( ( 100vw - 45vw ) / 2 );
     display: none;
+    box-shadow: rgba(0, 0, 0, 0.3) 0px 19px 38px, rgba(0, 0, 0, 0.22) 0px 15px 12px;
 }
-.priority-colors-cont{
+
+.textarea-cont {
+    height: 100%;
+    width: 75%;
+    border: none;
+    outline: none;
+    resize: none;
+    background-color: #dfe4ea;
+    padding: 2rem;
+    font-size: 1.7rem;
+}
+.priority-colors-cont {
     height: 100%;
     width: 25%;
     display: flex;
     flex-direction: column;
     justify-content: space-around;
     align-items: center;
-    background-color: #7f8fa6;
+    background-color: #4b4b4b;
 }
-.priority-color{
+.priority-color {
     height: 3rem;
     width: 55%;
-    /* background-color: lightpink; */
 }
-.textarea-cont{
-     height: 100%;
-     width: 75%;
-    border: none;
-    outline: none;
-    background-color: lightskyblue;
-    resize: none;
-    background-color: #ced6e0;
-    padding: 2rem;
-    font-size: 2rem;
+.border {
+    border: 5px solid #d1d8e0;
 }
-.border{
-    border: 2px solid #ced6e0;
- }
- .ticket-cont{
-    height: 14rem;
+
+.ticket-cont {
+    height: 13rem;
     width: 16rem;
-    background-color: #ced6e0;
+    background-color: #f1f2f6;
 }
-.ticket-color{
+.ticket-color {
     height: 1rem;
 }
-.ticket-id{
+.ticket-id {
     height: 2rem;
     padding: 0.4rem;
 }
-.task-area{
-    height: calc(100%- 1rem- 2rem -2rem);
+.task-area {
+    height: calc( 100% - 1rem - 2rem - 2rem );
     padding: 0.4rem;
     outline: none;
+    font-size: 1.3rem;
 }
-.main-cont{
+.ticket-lock {
+    height: 2rem;
+    display: flex;
+    font-size: 1.5rem;
+    padding-right: 1rem;
+    justify-content: flex-end;
+    color: #a5b1c2;
+}
+.main-cont {
     display: flex;
     flex-wrap: wrap;
-    padding:2rem;
+    padding: 2rem;
     gap: 2rem;
     justify-content: center;
+}
+
+
+@media screen and (min-width: 425px) and (max-width: 768px) {
+    .modal-cont {
+        width: 60vw;
+        left: calc( ( 100vw - 60vw ) / 2 );
+    }
+}
+
+@media screen and (max-width: 426px) {
+    .modal-cont {
+        width: 75vw;
+        height: 55vh;
+        top: calc( ( 100vh - 55vh ) / 2 );
+        left: calc( ( 100vw - 75vw ) / 2 );
+        flex-direction: column;
+    }
+    .textarea-cont {
+        width: 100%;
+        height: 75%;
+    }
+    .priority-colors-cont {
+        flex-direction: row;
+        width: 100%;
+        height: 25%;
+    }
+    .priority-color {
+        width: 17%;
+    }
+    .toolbox-cont > * {
+        margin-left: 2rem;
+        border-radius: 2px;
+    }
 }
